k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-rh-ingress
  namespace: saas-rh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app.humanosisu.com
    http:
      paths:
      - path: /asistencia(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: asistencia
            port:
              number: 80
      - path: /nomina(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nomina
            port:
              number: 80
